--- a/SayWhat/src/main/res/layout/record_playback.xml
+++ b/SayWhat/src/main/res/layout/record_playback.xml
@@ -4,6 +4,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#000000">
+
+    <ProgressBar android:id="@+id/pb"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:indeterminate="true"
+        android:indeterminateOnly="true"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:soundEffectsEnabled="false"
+        android:visibility="gone"
+
+        />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
